# WJ_RKNN_Model_Zoo

./: CMakeLists.txt  main.cpp  wj2.cpp
inc/: Config.hpp  FireControl.hpp  Head.hpp  ImgCore.hpp  ImgFeature.hpp  ImgMath.hpp  ImgProcess.hpp  MLX90640_API.h  MLX90640_APP.h  MLX90640_LINUX_I2C_Driver.h  SerialPort.hpp
src/: FireControl.cpp  ImgCore.cpp  ImgFeature.cpp  ImgMath.cpp  ImgProcess.cpp  MLX90640_API.cpp  MLX90640_APP.cpp  MLX90640_LINUX_I2C_Driver.cpp  SerialPort.cpp
